# serializer version: 1
# name: test_sensor_states[sensor.0_0_0_0_containers_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_containers_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:docker',
    'original_name': 'Containers active',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--docker_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_containers_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 Containers active',
      'icon': 'mdi:docker',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_containers_active',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_containers_cpu_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_containers_cpu_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:docker',
    'original_name': 'Containers CPU used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--docker_cpu_use',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_containers_cpu_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 Containers CPU used',
      'icon': 'mdi:docker',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_containers_cpu_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '77.2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_containers_ram_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_containers_ram_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:docker',
    'original_name': 'Containers RAM used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--docker_memory_use',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_containers_ram_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 Containers RAM used',
      'icon': 'mdi:docker',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_containers_ram_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1149.6',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_cpu_thermal_1_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_cpu_thermal_1_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'cpu_thermal 1 Temperature',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-cpu_thermal 1-temperature_core',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_cpu_thermal_1_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': '0.0.0.0 cpu_thermal 1 Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_cpu_thermal_1_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '59',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_err_temp_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_err_temp_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'err_temp Temperature',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-err_temp-temperature_hdd',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_err_temp_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': '0.0.0.0 err_temp Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_err_temp_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md1_raid_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_md1_raid_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': 'md1 Raid available',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-md1-available',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md1_raid_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 md1 Raid available',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_md1_raid_available',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md1_raid_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_md1_raid_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': 'md1 Raid used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-md1-used',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md1_raid_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 md1 Raid used',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_md1_raid_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md3_raid_available-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_md3_raid_available',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': 'md3 Raid available',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-md3-available',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md3_raid_available-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 md3 Raid available',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_md3_raid_available',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md3_raid_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_md3_raid_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': 'md3 Raid used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-md3-used',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_md3_raid_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 md3 Raid used',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_md3_raid_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_free-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_media_free',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:harddisk',
    'original_name': '/media free',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/media-disk_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_free-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 /media free',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_media_free',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '426.5',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_media_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:harddisk',
    'original_name': '/media used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/media-disk_use',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 /media used',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_media_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '30.7',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_used_percent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_media_used_percent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': '/media used percent',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/media-disk_use_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_media_used_percent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 /media used percent',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_media_used_percent',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6.7',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_na_temp_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_na_temp_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'na_temp Temperature',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-na_temp-temperature_hdd',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_na_temp_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': '0.0.0.0 na_temp Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_na_temp_temperature',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_free-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ram_free',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:memory',
    'original_name': 'RAM free',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--memory_free',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_free-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 RAM free',
      'icon': 'mdi:memory',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ram_free',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2745.0',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ram_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:memory',
    'original_name': 'RAM used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--memory_use',
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 RAM used',
      'icon': 'mdi:memory',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ram_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1047.1',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_used_percent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ram_used_percent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:memory',
    'original_name': 'RAM used percent',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test--memory_use_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ram_used_percent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 RAM used percent',
      'icon': 'mdi:memory',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ram_used_percent',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '27.6',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_free-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ssl_free',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:harddisk',
    'original_name': '/ssl free',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/ssl-disk_free',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_free-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 /ssl free',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ssl_free',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '426.5',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_used-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ssl_used',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': 'mdi:harddisk',
    'original_name': '/ssl used',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/ssl-disk_use',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_used-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': '0.0.0.0 /ssl used',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ssl_used',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '30.7',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_used_percent-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.0_0_0_0_ssl_used_percent',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:harddisk',
    'original_name': '/ssl used percent',
    'platform': 'glances',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test-/ssl-disk_use_percent',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor_states[sensor.0_0_0_0_ssl_used_percent-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '0.0.0.0 /ssl used percent',
      'icon': 'mdi:harddisk',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.0_0_0_0_ssl_used_percent',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6.7',
  })
# ---
